--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,8 @@
     "env": {
       "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD": "true"
     }
-  }
+  },
+  "buildCommand": "echo 'No build needed for API-only project'",
+  "outputDirectory": ".",
+  "installCommand": "npm install"
 }
