--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,23 @@
 {
+  "version": 2,
   "functions": {
-    "api/scrape-episode.js": {
-      "maxDuration": 60
+    "api/*.js": {
+      "maxDuration": 30,
+      "memory": 1024
     }
-  }
+  },
+  "env": {
+    "NODE_ENV": "production"
+  },
+  "build": {
+    "env": {
+      "NODE_ENV": "production"
+    }
+  },
+  "rewrites": [
+    {
+      "source": "/",
+      "destination": "/index.html"
+    }
+  ]
 }
